Vertically aligned filters, fixed more duplicate filter containers

--- a/src/css/Filters.css
+++ b/src/css/Filters.css
@@ -1,3 +1,8 @@
+#filter-container {
+  display: flex;
+  align-items: center;
+}
+
 .form-control,
 .input-group-text,
 .custom-select {
